--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,8 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #6debb0; /* Fondo beige claro */
+            background-image: url("/static/images/carros01.jpg");
+            background-color: rgba(127, 175, 179, 0.384); /* Fondo beige claro */
             margin: 0;
             padding: 0;
         }
